[project]
name = "jetbase"
version = "0.0.1"
description = "Jetbase is a Python database migration tool"
readme = "README.md"
authors = [
    { name = "jaz", email = "jaz.allibhai@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
jetbase = "jetbase.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
