[project]
name = "jetbase"
version = "0.0.1"
description = "Jetbase is a Python database migration tool"
readme = "README.md"
authors = [
    { name = "jaz", email = "jaz.allibhai@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
jetbase = "jetbase.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.38.2",
    "ruff>=0.14.2",
]
